# real-time-sign-language-translation

./: .env.example  .gitignore  .gitkeep  GESTURE_SYSTEM_OVERVIEW.md  GETTING_STARTED.txt  IMPLEMENTATION_COMPLETE.txt  LICENSE  PHASE_12_SUMMARY.md  QUICK_REFERENCE.txt  README.md  REALTIME_TRANSLATION_IMPLEMENTATION.md  demo_realtime_translation.py  pyproject.toml  query  requirements.txt  setup.py  test_validator_integration.py  verify_system.py
.github/workflows/: build.yml  tests.yml
config/: logging.yaml  model_config.json  settings.yaml
docs/: API.md  ARCHITECTURE.md  COLLECTION_WORKFLOW.md  CUSTOM_DATASET_SETUP.md  DATASET_IMPLEMENTATION_SUMMARY.md  DATA_COLLECTION.md  GESTURE_QUICK_REFERENCE.md  LANDMARK_NORMALIZATION.md  README.md  SETUP.md  STATIC_GESTURE_DATASET.md  TROUBLESHOOTING.md  USAGE.md
scripts/: analyze_dataset.py  collect_training_data.py  data_preprocessing.py  download_models.py  setup_environment.py  train_model.py  train_xgboost_model.py  verify_gesture_landmarks.py
src/: __init__.py  main.py
src/app/: __init__.py  app_state.py
src/camera/: __init__.py  camera_handler.py  frame_processor.py
src/controllers/: __init__.py  camera_controller.py  sign_controller.py  speech_controller.py
src/database/: __init__.py  db_manager.py  models.py
src/models/: __init__.py  gesture_recognizer.py  inference.py  model_loader.py  sign_detector.py  xgboost_classifier.py
src/services/: __init__.py  camera_service.py  recognition_service.py  speech_service.py  video_service.py
src/translation/: __init__.py  language_mapper.py  realtime_translator.py  sign_to_text.py  speech_handler.py  text_to_speech.py
src/ui/: __init__.py  gui.py  main_window.py  styles.py  video_player.py  widgets.py
src/ui/panels/: __init__.py  camera_panel.py
src/utils/: config.py  constants.py  landmark_normalizer.py  logger.py  validators.py
tests/: __init__.py  conftest.py  test_camera.py  test_models.py  test_translation.py  test_ui.py
tests/integration/: test_end_to_end.py
